# nilaykumar.github.io

./: Gemfile  README.org  _config.yml  about.markdown  hugo.toml  ideas.txt  pyproject.toml  requirements.txt
.github/workflows/: hugo.yaml
_includes/: def.html  mathjax.html  thm
_layouts/: default.html  home.html  post.html
_posts/: 2020-02-14-tsygan-gmm.markdown  2020-02-14-welcome-to-jekyll.markdown  2020-02-15-cevect-tensor-excision.markdown
assets/: main.scss  xypic.js
content/: _index.md
content-org/: _index.org
content-org/blog/: .dir-locals.el  _index.org  a-map-of-mathematics.org  insar-gaza.org  mnist-data.org  one-weird-kernel-trick.org  the-twisted-eilenberg-zilber-theorem.org
content-org/blog/bib/: insar-gaza.bib  (+3 more)
content-org/garden/: _index.org  alienation.org  commodity-fetishism.org  december-adventure.org  digital-gardens.org  innovation.org  python.org  test.org  yojijukugo.org
content/blog/: _index.md  a-map-of-mathematics.md  insar-gaza.md  mnist-data.md  one-weird-kernel-trick.md  the-twisted-eilenberg-zilber-theorem.md
content/garden/: alienation.md  commodity-fetishism.md  december-adventure.md  digital-gardens.md  innovation.md  python.md  test.md  yojijukugo.md
layouts/: 404.html
layouts/_default/: baseof.html  list.html  single.html  tags.html
layouts/blog/: list.html  single.html
layouts/garden/: list.html  single.html
layouts/partials/: alltags.html  backlinks.html  dates_and_tags.html  head.html  latex_macros.html  page_tags.html  progress.html
layouts/tags/: list.html  term.html
static/css/: stylesheet.css
(+1 files in other folders)
