[project]
name = "nk_blog_code"
version = "0.1.0"
description = "Contains python code written for my blog"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Nilay Kumar", email = "nilaykumar@tutanota.com"},
]
maintainers = [
  {name = "Nilay Kumar", email = "nilaykumar@tutanota.com"},
]

dependencies = [
  "pandas",
  "fastparquet",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nk_blog_code"]

[tool.ruff]
extend-ignore = [
"D100",
"D101",
"D203",
"D204",
"D212",
"ANN101",
"ANN102",
]
exclude = [
".git",
".venv",
"__pycache__",
"tests/"
]
extend-select = [
"E",
"F",
"ANN",
"S",
"B",
"A",
"RET",
"D",
]

[tool.ruff.per-file-ignores]
"tests/test_" = ["D"]
"*/__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"
