[project]
name = "nk_blog_code"
version = "0.1.0"
description = "Contains python code written for my blog"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Nilay Kumar", email = "nilaykumar@tutanota.com"},
]
maintainers = [
  {name = "Nilay Kumar", email = "nilaykumar@tutanota.com"},
]

dependencies = [
  "pandas",
  "matplotlib",
  "ruff"
]

[dependency-groups]
msc-viz = [
  "scikit-learn",
  "fastparquet"
]
insar = [
  "shapely",
  "geopandas",
  "xarray",
  "rioxarray"
]
